methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:54: error: not found: value color
  setCouleurBrosse(color.YELLOW);
                   ^