methods.flowerpot.FlowerPot.scala.code
def growFlowers()
{
  growFlower(Color.RED);
  for (i <- 1 to 3) avance();
  
  growFlower(Color.CYAN);
  for (i <- 1 to 3) recule();
  droite();
  for (i <- 1 to 2) avance();
  gauche();
  
  growFlower(Color.ORANGE);
  for (i <- 1 to 3) recule();
  droite();
  for (i <- 1 to 2) avance();
  gauche();
  
  growFlower(Color.PINK);
  for (i <- 1 to 3) avance();

  growFlower(Color.GREEN);
}

def ecrire()
{
  baisseBrosse();
  leveBrosse();
}

def growFlower(c:Color)
{
  setCouleurBrosse(c);
  ecrire();
  
  avance();
  gauche();
  avance();
  droite();
  avance();
  ecrire();
  
  avance();
  gauche();
  avance();
  ecrire();
  
  avance();
  gauche();
  avance();
  ecrire();
  
  gauche();
  avance();
  setCouleurBrosse(color.YELLOW);
  ecrire();
  gauche();
}